--- a/Keeper/UNet_cfg.yaml
+++ b/Keeper/UNet_cfg.yaml
@@ -1,19 +1,20 @@
 model_settings:
     in_channels: 3
     out_channels: 3
-    init_channels: 4
+    init_channels: 32
     block_size: 2
+    compactor: False
 
 training_settings:
-    seed: 98
-    epochs: 80
-    batch_size: 16
+    seed: 3
+    epochs: 60
+    batch_size: 32
     patch_size: 256
     workers: 4
     init_lr: 1.e-4
     lr_schedule:
         20: 1.e-4
         40: 5.e-5
-        60: 2.5e-5
-        -1: 1.25e-5
+        # 60: 2.5e-5
+        -1: 1.e-5
     grad_clip: 5
