--- a/SID/ResUNet_cfg.yaml
+++ b/SID/ResUNet_cfg.yaml
@@ -4,18 +4,19 @@ model_settings:
     width: 32
     block_size: 4
     res_connect: conv
-    head: False
+    head: True
 
 training_settings:
     seed: 54
-    epochs: 200
+    epochs: 80
+    gpu: 7
     batch_size: 32
     patch_size: 256
     workers: 6
     init_lr: 1.e-4
     lr_schedule:
-        100: 1.e-4
-        160: 5.e-5
-        180: 2.5e-5
+        20: 1.e-4
+        40: 5.e-5
+        60: 2.5e-5
         -1: 1.e-5
     grad_clip: 5
