--- a/SID/UNet_cfg.yaml
+++ b/SID/UNet_cfg.yaml
@@ -1,20 +1,21 @@
 model_settings:
     in_channels: 4
-    out_channels: 12 
-    init_channels: 32
+    out_channels: 12
+    width: 32
     block_size: 2
     compactor: False
 
 training_settings:
+    gpu: 0
     seed: 54
-    epochs: 80
+    epochs: 160
     batch_size: 1
-    patch_size: 
-    workers: 6
+    patch_size: 512 
+    workers: 4
     init_lr: 1.e-4
     lr_schedule:
         40: 1.e-4
-        # 40: 5.e-5
-        # 60: 2.5e-5
+        80: 5.e-5
+        120: 2.5e-5
         -1: 1.e-5
     grad_clip: 5
