--- a/Keeper/options/train/UNet/UNet_debug.yaml
+++ b/Keeper/options/train/UNet/UNet_debug.yaml
@@ -1,4 +1,6 @@
-exp_name: UNet_SIDD_width32_iter
+exp_name: UNet_iter_debug
+timestamp_enabled: False
+save_path: ./checkpoints
 
 
 model_settings:
@@ -10,10 +12,11 @@ model_settings:
     compactor: False
 
 train_settings:
-    gpu: 4,5,6,7
+    gpu: 0
     seed: 13
-    trainer_type: iter
     grad_clip: 5
+    trainer_type: iter
+    resume: 
 
     optim:
         type: AdamW
@@ -45,8 +48,8 @@ train_settings:
                 type: lmdb
             filename_tmpl: '{}'
  
-            dataroot_lq: ./datasets/SIDD/train/input_crops.lmdb
-            dataroot_gt: ./datasets/SIDD/train/gt_crops.lmdb
+            lq_path: ../feed/SIDD/train/input_crops.lmdb
+            gt_path: ../feed/SIDD/train/gt_crops.lmdb
 
             # data preprocess
             gt_size: 256
@@ -55,8 +58,8 @@ train_settings:
 
             # dataloader
             use_shuffle: True
-            num_worker_per_gpu: 4
-            batch_size_per_gpu: 8
+            num_worker_per_gpu: 0
+            batch_size_per_gpu: 1
             dataset_enlarge_ratio: 1
             prefetch_mode: ~ 
 
@@ -65,16 +68,16 @@ train_settings:
             type: PairedImageDataset
             io_backend: 
                 type: lmdb
-            dataroot_lq: ./datasets/SIDD/val/input_crops.lmdb
-            dataroot_gt: ./datasets/SIDD/val/gt_crops.lmdb
+            lq_path: ../feed/SIDD/val/input_crops.lmdb
+            gt_path: ../feed/SIDD/val/gt_crops.lmdb
 
         test:
             name: SIDD_val
             type: PairedImageDataset
             io_backend: 
                 type: lmdb
-            dataroot_lq: ./datasets/SIDD/val/input_crops.lmdb
-            dataroot_gt: ./datasets/SIDD/val/gt_crops.lmdb
+            lq_path: ../feed/SIDD/val/input_crops.lmdb
+            gt_path: ../feed/SIDD/val/gt_crops.lmdb
 
 display:
     print_freq: 10
